external/fortran_stdlib/test/logger/first_log_file.txt
2024-12-09 14:01:02.065: N/A % TEST_STDLIB_LOGGER: ERROR: This message
    should be output to five files and not to OUTPUT_UNIT, limited to
    72 columns width, preceded by no blank line, then by a time stamp,
    then by MODULE % PROCEDURE, be prefixed by ERROR and be indented on
    subsequent lines by 4 columns, and finish with STAT and.ERRMSG
    lines.
    With stat = 0
    With errmsg = "This is a long ERRMSG intended to test formatting of
    the ERRMSG when it is more than 72 columns wide."
2024-12-09 14:01:02.067
dummy.txt:0:25

This text should be written to UNIT1 and UNIT3 and not to OUTPUT_UNIT.
                        1
Error: There is no real error here.
2024-12-09 14:01:02.073
dummy.txt:0:25

This text should be written to UNIT1, UNIT2, and OUTPUT_UNIT.
                        ^
Error: There is no real error here.
2024-12-09 14:01:02.073: This message should be always printed, 
    irrespective of the severity level
2024-12-09 14:01:02.073: DEBUG: This message should be printed
2024-12-09 14:01:02.073: INFO: This message should be printed
2024-12-09 14:01:02.073: WARN: This message should be printed
2024-12-09 14:01:02.073: ERROR: This message should be printed
2024-12-09 14:01:02.073: I/O ERROR: This message should be printed
2024-12-09 14:01:02.073: This message should be always printed, 
    irrespective of the severity level
2024-12-09 14:01:02.073: DEBUG: This message should be printed
2024-12-09 14:01:02.073: INFO: This message should be printed
2024-12-09 14:01:02.073: WARN: This message should be printed
2024-12-09 14:01:02.073: ERROR: This message should be printed
2024-12-09 14:01:02.073: I/O ERROR: This message should be printed
2024-12-09 14:01:02.073: This message should be always printed, 
    irrespective of the severity level
2024-12-09 14:01:02.073: INFO: This message should be printed
2024-12-09 14:01:02.073: WARN: This message should be printed
2024-12-09 14:01:02.073: ERROR: This message should be printed
2024-12-09 14:01:02.073: I/O ERROR: This message should be printed
2024-12-09 14:01:02.073: This message should be always printed, 
    irrespective of the severity level
2024-12-09 14:01:02.073: WARN: This message should be printed
2024-12-09 14:01:02.073: ERROR: This message should be printed
2024-12-09 14:01:02.073: I/O ERROR: This message should be printed
2024-12-09 14:01:02.073: This message should be always printed, 
    irrespective of the severity level
2024-12-09 14:01:02.073: ERROR: This message should be printed
2024-12-09 14:01:02.073: I/O ERROR: This message should be printed
2024-12-09 14:01:02.073: This message should be always printed, 
    irrespective of the severity level
